--- a/apps/ActionListBundle_de.properties
+++ b/apps/ActionListBundle_de.properties
@@ -1,6 +1,6 @@
 # ActionListBundle_de.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # by Simon Ginsburg
 # German properties for the apps package including Action List of jmri.
 #
@@ -37,6 +37,8 @@ jmri.jmrit.consisttool.ConsistToolAction =          Oeffne Mehrfachtraktionenwer
 jmri.jmrit.sendpacket.SendPacketAction =            Oeffne DDC Paketwerkzeug
 
 jmri.jmrit.nixieclock.NixieClockAction = 			Oeffne Nixieuhr
+jmri.jmrit.lcdclock.LcdClockAction = 			    Oeffne LCDuhr
+jmri.jmrit.analogclock.AnalogClockAction = 			Oeffne Analgouhr
 jmri.jmrit.simpleclock.SimpleClockAction = 			Oeffne Spieluhrkonfigurator
 
 # Panels menu
@@ -54,3 +56,11 @@ jmri.jmrix.loconet.locomon.LocoMonAction =          Oeffne LocoNet Monitor
 jmri.jmrix.loconet.slotmon.SlotMonAction =          Oeffne LocoNet Speicher Monitor
 jmri.jmrix.nce.ncemon.NceMonAction =                Oeffne NCE Monitor
 jmri.jmrix.zimo.zimomon.Mx1MonAction =              Oeffne Zimo Monitor
+jmri.jmrix.grapevine.serialmon.SerialMonAction =    Oeffne Grapevine Monitor
+jmri.jmrix.grapevine.packetgen.SerialPacketGenAction = Oeffne Grapevine Sende Paket
+
+jmri.jmrix.rps.rpsmon.RpsMonAction      = Oeffne RPS Monitor
+jmri.jmrix.rps.display.DisplayAction    = Oeffne RPS Berechnungsfenster
+jmri.jmrix.rps.DataSourceAction         = Oeffne RPS Verbindungen
+jmri.jmrix.rps.trackingpanel.RpsTrackingFrameAction   = Oeffne RPS Verfolgungsfenster
+jmri.jmrix.rps.reversealign.AlignmentPanelAction     = Oeffne RPS Bearbeitungswerkzeug
