--- a/apps/AppsBundle_de.properties
+++ b/apps/AppsBundle_de.properties
@@ -1,6 +1,6 @@
 # AppsBundle_de.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 # by Simon Ginsburg
 # German properties for the apps package of jmri.
 
@@ -17,6 +17,12 @@ MenuItemPreferences = Voreinstellungen...
 
 MenuTools    = Werkzeuge
 MenuRoster   = Lokpark
+
+MenuHelp            = Hilfe
+MenuItemHelp        = Hilfe
+MenuItemLicense     = Lizenz ...
+MenuItemLocations   = Lokalitaet ...
+MenuItemContext     = Zusammenhang ...
 
 ButtonQuit = Beenden
 
@@ -50,6 +56,8 @@ DecoderProVersionCredit = DecoderPro {0}, ein Bestandteil des JMRI Projektes
 PacketProVersionCredit = PacketPro {0}, ein Bestandteil des JMRI Projektes
 PacketScriptVersionCredit = PacketScript {0}, ein Bestandteil des JMRI Projektes
 
-ConnectionCredit  = Verbindung via {0} ueber {1}
+ConnectionCredit  = Verbindung via {0} \u00FCber {1}
 JavaVersionCredit = Java Version {0} ({1})
+
+ConnectionFailed = Fehler {0} mit {1} 
 
