--- a/jmri/jmrit/beantable/BeanTableBundle_de.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle_de.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle_de.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrit.beantable GUI elements
 
@@ -37,6 +37,8 @@ StringSE8c4aspect  = SE8c Vierbegriffssignal
 StringTripleTurnout = Dreifachweiche
 StringDoubleTurnout = Doppelweiche
 StringVirtual = Virtuelle Weiche
+StringLsDec = LDT LS-DEC
+StringGrapevine = Grapevine
 
 LabelSystemName = Systembezeichnung:
 LabelUserName   = Benutzerbezeichnung:
@@ -44,6 +46,10 @@ LabelTurnoutNumber = Weichennummer:
 LabelGreenTurnoutNumber  = Gruene Weichennummer:
 LabelYellowTurnoutNumber = Gelbe Weichennummer:
 LabelRedTurnoutNumber    = Rote Weichennummer:
+LabelFlashGreenTurnoutNumber  = Gruen blinkende Weichennummer:
+LabelFlashYellowTurnoutNumber = Gelb blinkende Weichennummer:
+LabelFlashRedTurnoutNumber    = Rot blinkende Weichennummer:
+LabelDarkTurnoutNumber    = Unbeleuchtete Weichennumer:
 
 LightSystemName = Name des Lichtsystems
 LightSystemNameHint = Eingabe einer neuen Lichtbezeichnung z.B. CL1B13
@@ -115,6 +121,7 @@ ReminderTitle = Erinnerung
 
 ReminderInUse = Es wir ebenfalls in  {1} anderen Objekten verwendet.
 DeletePrompt = Sind Sie sicher, dass Sie {0} loeschen wollen?
+WarningUserName =  Der Nutzername " {0} " wird bereits verwendet.
 
 WarningTitle = Warnung
 
