--- a/jmri/jmrit/beantable/LogixTableBundle_de.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle_de.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -83,7 +83,9 @@ TurnoutSetHint = Waehle "Geradeaus" oder "Abzweigung" je nach Vorgabe der Weiche
 SensorSetHint = Waehle "Besetzt" oder "Frei" je nach Vorgabe des Sensorstatus
 LightSetHint = Waehle "Ein" oder "Aus" je nach Vorgabe der Bedingung fuer Licht
 SignalSetHint = Waehle geforderte Signalstellung
+LockSetHint = Waehle ge- oder entsperrt
 DataHintDelayedSensor = Waehle Verzoegerungszeit (Sekunden) fuer Sensor
+DataHintDelayedTurnout = Waehle Verzoegerungszeit (Sekunden) fuer Weiche
 DataHintMemory = Waehle geforderter Zustand des Speichers
 DataHintSound = Waehle zu spielendes Soundfile
 DataHintScript = Waehle zu startendes Skript
@@ -138,16 +140,24 @@ ActionSetSignalLit = Setze Signal Erleuchtet
 ActionTriggerRoute = Weichenstrasse anstossen
 ActionSetSensor = Setze Sensor
 ActionDelayedSensor = Setze Sensor verzoegert 
+ActionResetDelayedSensor = Setze Sensor verzoegert zurueck
+ActionCancelSensorTimers = Abbrechen setzen Sensorverzoegerung
+ActionDelayedTurnout = Setze Weiche verzoegertt
+ActionResetDelayedTurnout = Setze Weiche verzoegert zurueck
+ActionCancelTurnoutTimers = Abbrechen setzen Weichenverzoegerung
 ActionSetLight = Setze Liche
 ActionSetMemory = Setze Speicher
 ActionEnableLogix = Aktiviere Logik
 ActionDisableLogix = Deaktiviere Logik
 ActionPlaySound = Gerauschdokument abspielen
 ActionRunScript = Skript ablaufen lassen
+ActionTurnoutLock = Weichensperrung
 ActionTypeHint = Ereignis auswaehlen oder, falls nicht noetig, "Keine" anwaehlen.
 
 TurnoutClosed = Geradeaus
 TurnoutThrown = Abzweigung
+TurnoutUnlock = Entsperrt
+TurnoutLock = Gesperrt
 SensorActive = Aktiv
 SensorInactive = Inaktiv
 LightOn = Ein
@@ -182,12 +192,18 @@ Error22 = Der Name "{0}" passt zu keiner existierenden Logik.\nNamen korrigieren
 Error23 = Ungueltige Sekundeneingabe fuer verzoegerte Sensorreaktion - {0}\nBitte Anzahl Sekunden eingeben (nur Ziffern) und erneut versuchen.
 Error25 = Unsinnige oder fehlende Sekundeneingabe fuer verzoegerte Sensorreaktion - {0}\nBitte Anzahl Sekunden eingeben (nur Ziffern) und erneut versuchen.
 Error26 = Ungueltige Zeiteingabe "{0}"\nZeit muss im hh:mm Format eingegeben werden (e.g. 01:30, 16:00)\nfuer eine 24-Sunden Uhr. Bitte im korrekten Format eingeben und erneut versuchen. 
+Error27 = Ungueltige Sekundeneingabe fuer verzoegerte Sensorruecksetzreaktion - {0}\nBitte Anzahl Sekunden eingeben (nur Ziffern) und erneut versuchen.
+Error28 = Unsinnige oder fehlende Sekundeneingabe fuer verzoegerte Sensorzuruecksetzreaktion - {0}\nBitte Anzahl Sekunden eingeben (nur Ziffern) und erneut versuchen.
 Error30 = Doppelte Nutzernameneingabe. Dieser Name ist bereits in Bedingung "{0}" verwendet.\nBitte anderen Nutzernamen aus der Tabelle auswaehlen.
 Error32 = Es koennen keine zwei Logiken gleichzeitig bearbeitet werden. Bitte erst Logik "{0}" fertig bearbeiten und erneut versuchen.
 Error34 = Es koennen keine zwei Bedingungen gleichzeitig bearbeitet werden. Bitte erst Bedingung "{0}" fertig bearbeiten und erneut versuchen.
 Error35 = Es wird gerade eine Bedingung bearbeitet. Bitte erst Bedingung "{0}" fertig bearbeiten und erneut versuchen.
 Error36 = Es koennen keine weiteren Bedingungen fuer diese Logik eingegeben werden;\n da die Maximallimite erreicht ist.
 Error37 = Es koennen keine weiteren Zustandsvariablen fuer diese Bedingung eingegeben werden;\n da die Maximallimite erreicht ist.
+Error38 = Unsinniger oder fehlernder Parameterwert fuer Wartezeit der verzoegerten Weichenaktion  - {0}\nBitte Anzahl Sekunden eingeben (nur Ziffern) und erneut versuchen.
+Error39 = Ungueltiger Parameterwert fuer Wartezeit der verzoegerten Weichenaktion  - {0}\nBitte Anzahl Sekunden eingeben (nur Ziffern) und erneut versuchen.
+Error40 = Unsinniger oder fehlernder Parameterwert fuer Wartezeit der verzoegerten Weichenzuruecksetzaktion  - {0}\nBitte Anzahl Sekunden eingeben (nur Ziffern) und erneut versuchen.
+Error41 = Ungueltiger Parameterwert fuer Wartezeit der verzoegerten Weichenzuruecksetzaktion  - {0}\nBitte Anzahl Sekunden eingeben (nur Ziffern) und erneut versuchen.
 
 WarnTitle = Warnung
 ButtonDisabled = Ausgeschaltet weiterfahren
