--- a/jmri/jmrit/symbolicprog/SymbolicProgBundle_de.properties
+++ b/jmri/jmrit/symbolicprog/SymbolicProgBundle_de.properties
@@ -1,7 +1,7 @@
 #
 # jmri.jmrit.symbolicprog.SymbolicProgBundle:de.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Copyright 2007 Bob Jacobsen, part of JMRI, 
 # see the COPYING file for license info
@@ -27,13 +27,17 @@ ButtonStopWriteAll = Schreiben aller Seiten abbrechen
 
 ButtonReadChangesSheet = Aenderungen dieser Seite auslesen
 ButtonReadFullSheet = Diese Seite auslesen
-ButtonWriteChangesSheet = Aenderungen dieser Seite auslesen
+ButtonWriteChangesSheet = Aenderungen dieser Seite schreiben
 ButtonWriteFullSheet = Diese Seite schreiben
+ButtonConfirmChangesSheet = Aenderungen dieser Seite vergleichen
+ButtonConfirmFullSheet = Diese Seite vergleichen
 
 ButtonStopReadChangesSheet = Lesen von Aenderungen dieser Seite abbrechen
 ButtonStopReadSheet = Lesen dieser Seite abbrechen
 ButtonStopWriteChangesSheet = Schreiben von Aenderungen dieser Seite abbrechen
 ButtonStopWriteSheet = Schreiben dieser Seite abbrechen
+ButtonStopConfirmChangesSheet = Vergleichen von Aenderungen dieser Seite abbrechen
+ButtonStopConfirmSheet = Vergleichen dieser Seite abbrechen
 
 TipClickToOpen = Anclicken um Progremmierer zu oeffnen
 TipSelectLoco = Lok oder Decoder anwaehlen zum aktivieren
@@ -48,8 +52,10 @@ TipReadChangesSheet = Lese ausgewaehlte Werte von dieser Seite vom Decoder. Warn
 TipReadAllSheet = Lese alle Werte von dieser Seit vom Decoder. Warnung: Dieser Vorgang kann sehr lange dauern!
 TipWriteHighlightedSheet = Schreibe ausgewaehlte Werte von dieser Seite in den Decoder.
 TipWriteAllSheet = Schreibe alle Werte von dieser Seite in den Decoder.
+TipConfirmChangesSheet = Vergleiche ausgewaehlte Werte von dieser Seite mit dem Decoder. Warnung: Dieser Vorgang kann sehr lange dauern!
+TipConfirmAllSheet = Vergleiche alle Werte von dieser Seite mit dem Decoder. Warnung: Dieser Vorgang kann sehr lange dauern!
 
-TipNoRead = Knopf deaktiviert da Zentraleinheitleine CV's auslesen kann
+TipNoRead = Knopf deaktiviert da Zentraleinheit keine CV's auslesen kann
 TipTabDisabledNoCategory = Spalte deaktiviert da keine Optionen in dieser Seite bearbeitbar sind
 
 StateIdle = Pause
@@ -64,6 +70,7 @@ StateExceptionDuringRead = Fehler beim Lesen eines CV: {0}
 StateReadingIndexedCV = Lese indexierter CV{0}.{1} ...
 StateExceptionDuringIndexedRead = Fehler beim Lesen eines indexierten CV: {0}
 StateConfirmingCV = Bestaetige CV{0}...
+StateConfirmIndexedCV = Bestaetige indexierter CV{0}.{1} ...
 StateExceptionDuringConfirm = Fehler beim Bestaetigen eines CV: {0}
 StateWritingCV = Schreibe CV{0}...
 StateExceptionDuringWrite = Fehler beim Schreiben eines CV: {0}
@@ -71,6 +78,7 @@ StateWritingPICV = Schreibe PI CV{0} ...
 StateWritingSICV = Schreibe SI CV{0} ...
 StateWritingIndexedCV = Schreibe indexierter CV{0}.{1} ...
 StateExceptionDuringIndexedWrite = Fehler beim Schreiben eines indexierten CV: {0}
+StateMultipleMatch = Mehrfach zutreffende Decoder entdeckt - Manuelle Auswahl aus der vorgeschlagenen Liste von Decodern
 
 MenuFile = Dokument
 MenuReset = Zurücksetzen
