--- a/jmri/jmrix/JmrixSystemsBundle_de.properties
+++ b/jmri/jmrix/JmrixSystemsBundle_de.properties
@@ -1,6 +1,6 @@
 # JmrixSystemsBundle_de.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix Systems menu
 
@@ -28,7 +28,9 @@ MenuItemMRC = Model Rectifier Corp (MRC)
 MenuItemCommandMonitor = Befehlsmonitor
 MenuItemSendCommand = Sende Befehl
 MenuItemFirmwareUpdate = Firmware Aktualisierung
+MenuItemSlotMonitor = Adressspeicher Monitor
 MenuItemMacroCommand = Sende Skript
 MenuItemMacroEdit = Bearbeite Skript
+MenuItemConsistEdit = Bearbeite Mehrfachtraktion
 MenuItemTrackPacketMonitor = Gleispaket Monitor
 MenuItemClockMon = Monitor Uhr
