--- a/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_de.properties
+++ b/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_de.properties
@@ -1,6 +1,6 @@
 # NodeConfigBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.cmri.serial.nodeconfig window
 
@@ -12,10 +12,13 @@ LabelCardSize       = Kartengroesse:
 LabelNodeAddress    = Knotenadresse (UA):
 LabelNodeType       = Knotentyp:
 LabelDelay          = Empfangsverzoegerung (DL):
+LabelPulseWidth     = Pulsbreite:
+LabelMilliseconds   = (Millisekunden)
 
 TipNodeAddress      = Eingabe der Kontenadresse, beginnend bei 0.
 TipNodeType         = Waehle C/MRI Knotentyp.
 TipDelay            = Verzoegerung zwischen  bytes (10 mus Einheit), normalerweise 0.
+TipPulseWidth       = Pulsbreite der Steuerpulse fuer Weichensteuerung (100 bis 10000 zugelassen).
 TipCardSize         = Waehle Anzahl bits per Karte.
 TipAddButton        = Ergaenze neuen Knoten
 TipEditButton       = Bearbeite bestehenden Knoten
@@ -84,6 +87,9 @@ Error12   = Dies ist eine C/MRI Systemanforderung.
 Error13   = Fehler - USIC_SUSIC benoetigt mindestens eine Ein- oder Ausgangskarte.
 Error14   = Eingangs- und Ausgangskarten konfigurieren und erneut versuchen.
 Error15   = Fehler - USIC_SUSIC Karten muessen 24-bit oder 32-bit sein.
+Error16   = Fehler - Minimale Pulsbreite ist 100, bitte erneut versuchen.
+Error17   = Fehler - Minimale Pulsbreite ist 10000, bitte erneut versuchen.
+Error18   = Fehler - Ungueltiges Zeichen in der Pulsbreite, bitte erneut versuchen.
 
 FeedBackAdd     = C/MRI Knoten ergaenzt. Knotenadresse =
 FeedBackDelete  = C/MRI Knoten geloescht. Knotenadresse =
