--- a/jmri/jmrix/grapevine/GrapevineBundle_de.properties
+++ b/jmri/jmrix/grapevine/GrapevineBundle_de.properties
@@ -1,6 +1,6 @@
 # GrapevineBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.grapevine menu
 
@@ -8,3 +8,4 @@ MenuSystem    = Grapevine
 
 MenuItemCommandMonitor      = Kommunikations Monitor
 MenuItemSendCommand         = Sende Befehl
+MenuItemConfigNodes         = Konfiguriere Knoten
