--- a/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_de.properties
+++ b/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_de.properties
@@ -1,6 +1,6 @@
 # NodeConfigBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.grapevine.nodeconfig window
 
@@ -17,6 +17,7 @@ TipNodeType         = Waehle Knotentyp.
 TipAddButton        = Ergaenze neuen Knoten
 TipEditButton       = Bearbeite bestehenden Knoten
 TipDeleteButton     = Loesche bestehenden Knoten
+TipInitButton       = Sende Initialisierung an Knoten
 TipDoneButton       = Waehle wenn Knotenkonfiguration abgeschlossen
 TipUpdateButton     = Aendere Knoteninformation
 TipCancelButton     = Breche Bearbeiten ab
@@ -24,6 +25,7 @@ TipCancelButton     = Breche Bearbeiten ab
 ButtonAdd           = Knoten hinzufuegen
 ButtonEdit          = Knoten bearbeiten
 ButtonDelete        = Knoten loeschen
+ButtonInit          = Knoten initialisieren
 ButtonDone          = Beenden
 ButtonUpdate        = Knoten aktualisieren
 ButtonCancel        = Abbrechen
