--- a/jmri/jmrit/JmritToolsBundle_de.properties
+++ b/jmri/jmrit/JmritToolsBundle_de.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle_de.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrit Tools menu
 
@@ -37,6 +37,7 @@ MenuItemSendDCCPacket = Versenden eines einzelnen DCC Pakets
 
 MenuClocks = Uhren
 MenuItemNixieClock = Nixie Uhr
+MenuItemLcdClock = LCD Uhr
 MenuItemSetupClock = Einstellungen Spieluhr
 MenuItemAnalogClock = Analoguhr
 
