add ... after load and save throttle name

--- a/jmri/jmrit/JmritToolsBundle_cs.properties
+++ b/jmri/jmrit/JmritToolsBundle_cs.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle_cs.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #by Michal Basta
 # Czech properties (w/o diacritic) for the jmri.jmrit Tools menu
 
@@ -18,9 +18,9 @@ MenuItemSimpleSignal = Jednoducha navestni logika
 
 MenuThrottles = Lokoovladace
 MenuItemNewThrottle = Novy lokoovladac...
-MenuItemSaveThrottleLayout = Ulozit sablonu lokoovladace
-MenuItemLoadThrottleLayout = Nahrat sablonu lokoovladace
-MenuItemEditThrottlePreferences = Upravit prednastaveni lokoovladace
+MenuItemSaveThrottleLayout = Ulozit sablonu lokoovladace ...
+MenuItemLoadThrottleLayout = Nahrat sablonu lokoovladace ...
+MenuItemEditThrottlePreferences = Upravit prednastaveni lokoovladace ...
 
 MenuItemPowerControl = Ovladani napajeni
 MenuItemSpeedometer = Speedometer
