--- a/jmri/jmrit/JmritToolsBundle_cs_CZ.properties
+++ b/jmri/jmrit/JmritToolsBundle_cs_CZ.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle_cs_CZ.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #by Michal Basta
 # Override certain czech properties for the jmri.jmrit Tools menu with CZ diacritic
 
@@ -18,9 +18,9 @@ MenuItemSimpleSignal = Jednoduchá navěstní logika
 
 MenuThrottles = Lokoovladače
 MenuItemNewThrottle = Nový lokoovladač...
-MenuItemSaveThrottleLayout = Uložit šablonu lokoovladače
-MenuItemLoadThrottleLayout = Nahrát šablonu lokoovladače
-MenuItemEditThrottlePreferences = Upravit přednastavení lokoovladače
+MenuItemSaveThrottleLayout = Uložit šablonu lokoovladače ...
+MenuItemLoadThrottleLayout = Nahrát šablonu lokoovladače ...
+MenuItemEditThrottlePreferences = Upravit přednastavení lokoovladače ...
 
 MenuItemPowerControl = Ovládání napájení
 MenuItemSpeedometer = Speedometer
