--- a/jmri/jmrit/JmritToolsBundle_da_DK.properties
+++ b/jmri/jmrit/JmritToolsBundle_da_DK.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle_da_DK.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # by Klaus Kongsted
 # Override certain properties for the jmri.jmrit Tools menu with danish
 
@@ -22,9 +22,9 @@ MenuItemRouteTable = Rutetabel
 
 MenuThrottles = Kørekontrollere
 MenuItemNewThrottle = Ny kørekontroller...
-MenuItemSaveThrottleLayout = Gem kørekontroller-design
-MenuItemLoadThrottleLayout = Åbn kørekontroller-design
-MenuItemEditThrottlePreferences = Redigér kørekontroller-indstillinger
+MenuItemSaveThrottleLayout = Gem kørekontroller-design ...
+MenuItemLoadThrottleLayout = Åbn kørekontroller-design ...
+MenuItemEditThrottlePreferences = Redigér kørekontroller-indstillinger ...
 
 MenuItemPowerControl = Power-kontrol
 MenuItemSpeedometer = Speedometer
