--- a/jmri/jmrit/JmritToolsBundle_de.properties
+++ b/jmri/jmrit/JmritToolsBundle_de.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle_de.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrit Tools menu
 
@@ -24,9 +24,9 @@ MenuItemSensorGroup = Sensorgruppen...
 
 MenuThrottles = Handregler
 MenuItemNewThrottle = Neuer Handregler...
-MenuItemSaveThrottleLayout = Speichere Handreglerdarstellung
-MenuItemLoadThrottleLayout = Lade Handreglerdarstellung
-MenuItemEditThrottlePreferences = Bearbeite Handregler Einstellungen
+MenuItemSaveThrottleLayout = Speichere Handreglerdarstellung ...
+MenuItemLoadThrottleLayout = Lade Handreglerdarstellung ...
+MenuItemEditThrottlePreferences = Bearbeite Handregler Einstellungen ...
 
 MenuItemPowerControl = Hauptschalter
 MenuItemSpeedometer = Geschwindigkeitsmesser
