--- a/jmri/jmrit/JmritToolsBundle_es.properties
+++ b/jmri/jmrit/JmritToolsBundle_es.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle_es.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 #
 # Default properties for the jmri.jmrit Tools menu
 #
@@ -27,9 +27,9 @@ MenuItemSensorGroup = Grupos de sensores...
 
 MenuThrottles = Mandos
 MenuItemNewThrottle = Mando nuevo...
-MenuItemSaveThrottleLayout = Guardar configuración de mandos
-MenuItemLoadThrottleLayout = Cargar configuración de mandos
-MenuItemEditThrottlePreferences = Editar preferencias de mandos
+MenuItemSaveThrottleLayout = Guardar configuración de mandos ...
+MenuItemLoadThrottleLayout = Cargar configuración de mandos ...
+MenuItemEditThrottlePreferences = Editar preferencias de mandos ...
 
 MenuItemPowerControl = Control de encendido
 MenuItemSpeedometer = Tacómetro
