--- a/jmri/jmrit/JmritToolsBundle_fr.properties
+++ b/jmri/jmrit/JmritToolsBundle_fr.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit Tools menu
 #
@@ -20,9 +20,9 @@ MenuItemSimpleSignal = Logique signal simple
 
 MenuThrottles = Régulateurs
 MenuItemNewThrottle = Nouveau régulateur...
-MenuItemSaveThrottleLayout = Sauvegarder les régulateurs
-MenuItemLoadThrottleLayout = Charger les régulateurs
-MenuItemEditThrottlePreferences = Modifier les options régulateurs
+MenuItemSaveThrottleLayout = Sauvegarder les régulateurs ...
+MenuItemLoadThrottleLayout = Charger les régulateurs ...
+MenuItemEditThrottlePreferences = Modifier les options régulateurs ...
 
 MenuItemPowerControl = Controle alimentation
 MenuItemSpeedometer = Calculateur vitesse
