Refactor LocoBufferTest to handle locobuffer, PR2 and new devices. I8N. JavaDocs

--- a/jmri/jmrix/loconet/LocoNetBundle_cs.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle_cs.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle_cs.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #by Michal Basta
 # Czech properties (w/o diacritic) for the jmri.jmrix.loconet menu
 
@@ -16,5 +16,5 @@ MenuItemSE8cProgrammer      = SE8c programator
 MenuItemThrottleMessages    = Hlaseni lokoovladace
 MenuItemClockMon            = Monitor hodin
 MenuItemStartLocoNetServer  = Spustit LocoNet Server
-MenuItemLocoBufferStats     = LocoBuffer monitor
+MenuItemLocoStats           = LocoBuffer monitor
 MenuItemCmdStnConfig        = Programator nastaveni centraly
