--- a/jmri/jmrix/loconet/LocoNetBundle_es.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle_es.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 #
@@ -19,5 +19,5 @@ MenuItemSE8cProgrammer      = Programador de SE8c
 MenuItemThrottleMessages    = Mensajes del mando
 MenuItemClockMon            = Monitor de reloj
 MenuItemStartLocoNetServer  = Arrancar servidor LocoNet
-MenuItemLocoBufferStats     = Monitor de estadísticas LocoBuffer
+MenuItemLocoStats           = Monitor de estadísticas LocoBuffer
 MenuItemCmdStnConfig        = Programador de opciones de la estación de comados
