--- a/jmri/jmrix/loconet/LocoNetBundle_da_DK.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle_da_DK.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle_da_DK.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # by Klaus Kongsted
 # Override properties for the jmri.jmrix.loconet menu with danish
 
@@ -16,7 +16,7 @@ MenuItemThrottleMessages    = Kørekontroller-beskeders
 MenuItemClockMon            = Ur monitor
 MenuItemStartLocoNetServer  = Start LocoNet-server
 MenuItemLocoNetOverTCPServer = LocoNet-over-TCP server
-MenuItemLocoBufferStats     = LocoBuffer Statistik-monitorering
+MenuItemLocoStats           = LocoBuffer Statistik-monitorering
 MenuItemCmdStnConfig        = Programmering af centralenhed
 MenuItemDownload            = Hent kort
 MenuItemSetID               = Sæt LocoNet ID
