--- a/jmri/jmrix/loconet/LocoNetBundle_de.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle_de.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle_de.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.loconet menu
 
@@ -18,7 +18,7 @@ MenuItemThrottleMessages    = Meldungen der Handregler
 MenuItemClockMon            = Uhr Monitor
 MenuItemStartLocoNetServer  = Starte LocoNet Server
 MenuItemLocoNetOverTCPServer = LocoNetOverTCP Server
-MenuItemLocoBufferStats     = LocoBuffer Statistik Monitor
+MenuItemLocoStats           = LocoBuffer Statistik Monitor
 MenuItemCmdStnConfig        = Zentraleinheitskonfigurator
 MenuItemDownload            = Firmware einspielen
 MenuItemSoundload           = Geraeusche einspielen
